--- a/index.html
+++ b/index.html
@@ -118,21 +118,22 @@
             </li>
             <li><dl>
                     <dt>
-                        <p class="plan">フリープラン</p>
-                        <p class="price">無料<span>/月</span></p>
+                        <p class="plan">デザイナープラン</p>
+                        <p class="price">１９８０円<span>/月</span></p>
                     </dt>
-                    <dd>・毎日１動画無料</dd>
-                    <dd>・コンテンツダウンロード（有料）</dd>
+                    <dd>・photoshopコースの動画見放題</dd>
+                    <dd>・illustratorコースの動画見放題</dd>
+		    <dd>・無料コンテンツダウンロード</dd>
                 </dl>
                 
             <li id="price_last_list"><dl>
                     <dt>
-                        <p class="plan">フリープラン</p>
-                        <p class="price">無料<span>/月</span></p>
+                        <p class="plan">コンプリートプラン</p>
+                        <p class="price">３９８０円<span>/月</span></p>
                     </dt>
-                    <dd>・毎日１動画無料</dd>
-                    <dd>・コンテンツダウンロード（有料）</dd>
-                    <dd>テキスト</dd>
+                    <dd>・全コースの動画見放題</dd>
+                    <dd>・無料コンテンツダウンロード</dd>
+                    <dd>・教科書プレゼント</dd>
                 </dl>
                 
         </ul>
