--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- メインイメージここから -->
 <div id="mainimage">
   <div id="mainimage_text">
-  	<p>オンラインで磨く、<br>クリエイティブな学校。<p>
+  	<p>オンラインで磨く、<br>クリエイティブな学校。</p>
 
   	<dl>	
 	 	<dt><img src="images/nestonline.png" alt="NESTschool"></dt>
@@ -104,7 +104,6 @@
             <span>学びたいと思った時がベストな時期。いつでも気軽に始められるように、月額料金制です。</span>
         </div>
         <ul class="cf">
-
             <li>
                 <dl>
                     <dt>
@@ -116,7 +115,8 @@
                 </dl>
                 <a href="#">入会する</a>
             </li>
-            <li><dl>
+            <li>
+            	<dl>
                     <dt>
                         <p class="plan">デザイナープラン</p>
                         <p class="price">１９８０円<span>/月</span></p>
@@ -124,8 +124,8 @@
                     <dd>・photoshopコースの動画見放題</dd>
                     <dd>・illustratorコースの動画見放題</dd>
 		    <dd>・無料コンテンツダウンロード</dd>
-                </dl>
-                
+		    </dl>
+            </li>
             <li id="price_last_list"><dl>
                     <dt>
                         <p class="plan">コンプリートプラン</p>
@@ -135,7 +135,7 @@
                     <dd>・無料コンテンツダウンロード</dd>
                     <dd>・教科書プレゼント</dd>
                 </dl>
-                
+	    </li>  
         </ul>
     </div>
 </div>
